Added tooltips and highlights for squares 1-20

--- a/website/styles.css
+++ b/website/styles.css
@@ -90,7 +90,7 @@ img {
     /* pointer-events: none; */
 }
 
-.underline {
+.highlight {
     background-image: url(../illustrator/highlight.svg);
     background-size: 0% auto;
     background-repeat: no-repeat;
