--- a/website/styles.css
+++ b/website/styles.css
@@ -169,3 +169,12 @@ li {
 a {
     text-decoration: none;
 }
+
+.scroll {
+    background-color: rgb(200, 200, 200);
+    /* background-color: red; */
+    position: absolute;
+    width: 2vh;
+    height: 2vh;
+    z-index: -1;
+}
