--- a/website/styles.css
+++ b/website/styles.css
@@ -183,8 +183,8 @@ a {
 }
 
 
-.minimap {
-    z-index: 3;
+#minimap {
+    z-index: 4;
     position: fixed;
     bottom: 5vh;
     right: 5vh;
@@ -195,8 +195,8 @@ a {
     }
 }
 
-.minimap-annotation {
-    z-index: 1;
+#minimap-annotation {
+    z-index: 2;
     position: fixed;
     bottom: -3.5vh;
     right: 2.5vh;
@@ -204,5 +204,42 @@ a {
     img {
         opacity: 70%;
         height: 33vh;
+    }
+}
+
+#minimap-annotation-path {
+    z-index: 4;
+    position: fixed;
+    bottom: -3.5vh;
+    right: 2.5vh;
+
+    img {
+        opacity: 100%;
+        height: 33vh;
+    }
+}
+
+#snap-scrolling {
+    z-index: 4;
+    position: fixed;
+    top: 3.5vh;
+    right: 1vh;
+    cursor:pointer;
+
+    img {
+        opacity: 100%;
+        height: 15vh;
+    }
+}
+
+#snap-scrolling-annotation {
+    z-index: 2;
+    position: fixed;
+    top: 3.5vh;
+    right: 1vh;
+
+    img {
+        opacity: 70%;
+        height: 15vh;
     }
 }
