Added the following:
- Mobile scroll listeners/content view checkers
- Minimap sizing on load
- Reformatted some code for readibility
- Changed scrolling resizing behavior on mobile

--- a/website/styles.css
+++ b/website/styles.css
@@ -1,6 +1,7 @@
 html,
 body {
-    font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic', 'franklin-gothic-std','Arial Narrow', Arial, sans-serif;
+    font-weight: 400;
     scrollbar-width: none;
     background-color: rgb(200, 200, 200);
 }
